# hal_zephyr

./: .gitignore  CMakeLists.txt  Kconfig  README.MD  ble.conf  debug.conf  prj.conf  sample.yaml  usbd_cdc.conf  west.yaml  west.yml
boards/: native_posix.conf  nrf52840dk_nrf52840.conf  nrf52840dk_nrf52840.overlay  ubx_bmd300eval_nrf52832.conf  ubx_bmd300eval_nrf52832.overlay  ubx_bmd330eval_nrf52810.overlay
boards/arm/neltech_nrf52832/: Kconfig.board  Kconfig.defconfig  board.cmake  neltech_nrf52832.dts  neltech_nrf52832_defconfig
boards/arm/neltek_nrf52832/: Kconfig.board  Kconfig.defconfig  board.cmake  neltek_nrf52832-pinctrl.dtsi  neltek_nrf52832.dts  neltek_nrf52832_defconfig
release/: build_001_june21.elf
src/: hal.c  hal.h  hal_adc.c  hal_ble.c  hal_gpio.c  hal_i2c.c  hal_pwm.c  hal_uart.c  main.c
src/ble/: ble_gatt.c  ble_gatt.h  bluetoothle.c
sysbuild/: mcuboot.conf  mcuboot.overlay
tests/integration/: CMakeLists.txt  testcase.yaml  twister_doc.txt
tests/integration/src/: main.c
tests/unit_testing/: README.MD
tests/unit_testing/gpio_hal/: CMakeLists.txt  prj.conf  testcase.yaml
tests/unit_testing/gpio_hal/boards/: native_posix.conf  nrf52840dk_nrf52840.conf
tests/unit_testing/gpio_hal/src/: main.c
